src/assets/style/_variables.scss
:root {
  // Breakpoints
  $global-breakpoint-xs: 0;
  $global-breakpoint-sm: 36rem; // 576px
  $global-breakpoint-md: 48rem; // 768px
  $global-breakpoint-lg: 62rem; // 992px
  $global-breakpoint-xl: 75rem; // 1200px
  $global-breakpoint-xxl: 100rem; // 1600px

  // Border Radius
  --global-border-radius: .25rem;

  // Border Width
  --global-border-width-0: 0;
  --global-border-width-1: .05rem; // 1px
  --global-border-width-2: .1rem; // 2px
  --global-border-width-3: .2rem; // 4px
  --global-border-width-4: .4rem; // 8px

  // Font Family
  --global-font-family-default: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  --global-font-family-monospace: 'Cascadia Code', 'Cascadia Code PL', 'Fira Code', Consolas, SFMono-Regular, Menlo, Monaco, 'Liberation Mono', 'Courier New', monospace;
  --global-font-family-heading: 'Audiowide', sans-serif;

  // Fluid Font Size
  $global-font-size-minimum: 1em; // 16px
  $global-font-size-maximum: 1.25em; // 20px
  --global-font-size-minimum: $global-font-size-minimum;
  --global-font-size-maximum: $global-font-size-maximum;
  @include fluid-type(
    --global-font-size-default,
    36em, // $global-breakpoint-sm,
    100em, // $global-breakpoint-xxl,
    $global-font-size-minimum,
    $global-font-size-maximum);

  // Font Size
  --global-font-size-0: 0.65em;
  --global-font-size-1: 0.85em;
  --global-font-size-2: 1em;
  --global-font-size-3: 1.125em;
  --global-font-size-4: 1.266em;
  --global-font-size-5: 1.424em;
  --global-font-size-6: 1.602em;
  --global-font-size-7: 1.802em;
  --global-font-size-8: 2.5em;

  // Font Weight
  --global-font-weight-light: 300;
  --global-font-weight-normal: 400;
  --global-font-weight-semi-bold: 600;
  --global-font-weight-bold: 700;

  // Line Height
  --global-line-height-1: 1.58;
  --global-line-height-2: 1.7;

  // Line Length
  --global-line-length-min: 45ch;
  --global-line-length-ideal: 66ch;
  --global-line-length-max: 75ch;
  @media screen and (max-width: $global-breakpoint-sm) {
    --global-line-length-min: 0;
  }

  // Content Width
  --global-content-width-maximum: 45rem;

  // Space
  @include fluid-type(
    --global-space-fluid-6,
    $global-breakpoint-sm,
    $global-breakpoint-xxl,
    1.5rem,
    4.5rem);
  --global-space-fluid--7: calc(var(--global-space-fluid-7) * -1);
  --global-space-fluid--6: calc(var(--global-space-fluid-6) * -1);
  --global-space-fluid--5: calc(var(--global-space-fluid-5) * -1);
  --global-space-fluid--4: calc(var(--global-space-fluid-4) * -1);
  --global-space-fluid--3: calc(var(--global-space-fluid-3) * -1);
  --global-space-fluid--2: calc(var(--global-space-fluid-2) * -1);
  --global-space-fluid--1: calc(var(--global-space-fluid-1) * -1);
  --global-space-fluid-1: calc(var(--global-space-fluid-6) / 16);
  --global-space-fluid-2: calc(var(--global-space-fluid-6) / 8);
  --global-space-fluid-3: calc(var(--global-space-fluid-6) / 4);
  --global-space-fluid-4: calc(var(--global-space-fluid-6) / 3);
  --global-space-fluid-5: calc(var(--global-space-fluid-6) / 2);
  --global-space-fluid-7: calc(var(--global-space-fluid-6) * 2);

  --global-space-fixed-6: 3rem;
  --global-space-fixed--7: calc(var(--global-space-fixed-7) * -1);
  --global-space-fixed--6: calc(var(--global-space-fixed-6) * -1);
  --global-space-fixed--5: calc(var(--global-space-fixed-5) * -1);
  --global-space-fixed--4: calc(var(--global-space-fixed-4) * -1);
  --global-space-fixed--3: calc(var(--global-space-fixed-3) * -1);
  --global-space-fixed--2: calc(var(--global-space-fixed-2) * -1);
  --global-space-fixed--1: calc(var(--global-space-fixed-1) * -1);
  --global-space-fixed-1: calc(var(--global-space-fixed-6) / 16);
  --global-space-fixed-2: calc(var(--global-space-fixed-6) / 8);
  --global-space-fixed-3: calc(var(--global-space-fixed-6) / 4);
  --global-space-fixed-4: calc(var(--global-space-fixed-6) / 3);
  --global-space-fixed-5: calc(var(--global-space-fixed-6) / 2);
  --global-space-fixed-7: calc(var(--global-space-fixed-6) * 2);

  --global-space-main: calc(var(--global-space-fluid-6) * 2.7);
  @media screen and (max-width: 576px) { // $global-breakpoint-sm
    --global-space-main: 0;
  }

  // Duration
  --global-duration-1: 200ms;
  --global-duration-2: 300ms;
  --global-duration-3: 600ms;
}

// Light theme
[data-theme='light'] {
  --global-accent-color: hsl(264, 82%, 50%);
  --global-background-color: hsl(216, 24%, 98%);
  --global-content-background-color: hsl(0, 0%, 100%);
  --global-border-color: hsla(0, 0%, 0%, 0.1);
  --global-body-color: hsl(0, 0%, 27%);
  --global-title-color: hsl(0, 0%, 7%);
  --global-disabled-color: hsla(0, 0%, 0%, 0.1);
  --global-placeholder-color: hsl(210, 8%, 67%);

  // Link
  --global-link-color: hsl(264, 82%, 50%);
  --global-link-visited-color: hsl(264, 61%, 35%);

  // Selection
  --global-selection-background-color: hsl(264, 82%, 50%);
  --global-selection-body-color: hsl(216, 24%, 96%);

  // Scroll
  --global-scroll-thumb-color: hsl(0, 0%, 100%);
  --global-scroll-track-color: hsl(0, 0%, 87%);

  // Info
  --global-info-background-color: var(--global-background-color);
  --global-info-border-color: hsl(153, 47%, 49%);
  --global-info-body-color: var(--global-body-color);
  --global-info-title-color: var(--global-title-color);

  // Warning
  --global-warning-background-color: hsla(50, 100%, 70%, 0.3);
  --global-warning-border-color: hsl(50, 100%, 35%);
  --global-warning-body-color: hsl(0, 0%, 0%);
  --global-warning-title-color: hsl(50, 100%, 20%);

  // Danger
  --global-danger-background-color: hsl(0, 100%, 95%);
  --global-danger-border-color: hsl(0, 100%, 30%);
  --global-danger-body-color: hsl(0, 0%, 0%);
  --global-danger-title-color: hsl(0, 100%, 10%);
}

// Dark theme
[data-theme='dark'] {
  --global-accent-color: hsl(254, 100%, 87%);
  --global-background-color: hsl(207, 62%, 14%);
  --global-content-background-color: hsl(206, 64%, 16%);
  --global-border-color: hsla(0, 0%, 100%, 0.1);
  --global-body-color: hsl(203, 20%, 84%);
  --global-title-color: hsl(0, 0%, 100%);
  --global-disabled-color: hsla(0, 0%, 100%, 0.1);
  --global-placeholder-color: hsl(210, 8%, 67%);

  // Link
  --global-link-color: hsl(254, 100%, 87%);
  --global-link-visited-color: hsl(254, 46%, 69%);

  // Scroll
  --global-scroll-thumb-color: hsl(70, 8%, 15%);
  --global-scroll-track-color: hsl(0, 0%, 30%);

  // Selection
  --global-selection-background-color: hsl(254, 100%, 87%);
  --global-selection-body-color: hsl(216, 24%, 96%);

  // Info
  --global-info-background-color: var(--global-background-color);
  --global-info-border-color: hsl(153, 47%, 49%);
  --global-info-body-color: var(--global-body-color);
  --global-info-title-color: var(--global-title-color);

  // Warning
  --global-warning-background-color: hsla(50, 100%, 46%, 0.3);
  --global-warning-border-color: hsl(50, 100%, 35%);
  --global-warning-body-color: var(--global-title-color);
  --global-warning-title-color: var(--global-title-color);

  // Danger
  --global-danger-background-color: hsl(0, 100%, 9%);
  --global-danger-border-color: hsl(0, 100%, 30%);
  --global-danger-body-color: var(--global-title-color);
  --global-danger-title-color: var(--global-title-color);
}

